# book2skills

./: .env.example  .gitignore  .impeccable.md  README.en.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 016b0b38122e_initial_schema.py  20260618_add_collections.py  20260618_collection_skill_pkgs.py  20260623_book_knowledge_units.py
backend/app/: main.py
backend/app/agent_client/: __init__.py  cli.py  client.py  mcp_tools.py  types.py
backend/app/core/: config.py  database.py  llm.py  retry.py
backend/app/models/: models.py
backend/app/pipeline/: asset_generator.py  book_knowledge_unit_store.py  chunker.py  cluster_generator.py  (+18 more)
backend/scripts/: book2skills_agent.py  book2skills_mcp_server.py  clean_db.py
backend/tests/: conftest.py  test_agent_cli.py  test_agent_client.py  test_agent_mcp_tools.py  test_agent_skill_ingest.py  test_agent_skill_ingest_schemas.py  test_book2skills_mcp_server.py  test_book_content_api.py  test_book_knowledge_unit_store.py  test_books_delete_api.py  test_collection_cluster_dedup.py  test_collection_generation_api.py  test_collection_generation_schemas.py  test_collection_ku_loader.py  test_collection_ku_processor.py  test_collection_skill_runs_api.py  test_collection_skill_task_metadata.py  test_collection_skills_api.py  test_collection_skills_schemas.py  test_collection_skills_smoke.py  test_collection_synthesis.py  test_collections_api.py  test_collections_schemas.py  test_collections_smoke.py  test_cross_book_normalizer.py  test_generate_collection_skill_task.py  test_ku_same_as_judge.py  test_llm_factory.py  test_pipeline.py  test_skill_packer.py
(+34 files in other folders)
